--- a/package.json
+++ b/package.json
@@ -21,14 +21,13 @@
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "globals": "^16.4.0",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
+    "supabase": "^2.53.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^7.1.7"
