--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,11 @@
 name: Deploy to Vercel
 
-# Only run on pushes to main branch
+# Disabled temporarily until we get Vercel IDs
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:  # Only run manually
+  # push:
+  #   branches:
+  #     - main
 
 jobs:
   deploy:
