--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,9 @@
 name: Deploy to Vercel
 
-# Disabled temporarily until we get Vercel IDs
 on:
-  workflow_dispatch:  # Only run manually
-  # push:
-  #   branches:
-  #     - main
+  push:
+    branches:
+      - main
 
 jobs:
   deploy:
