Fixed Error with Multiform Step 3

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint src --ext ts,tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,css,json}\"",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:ci": "npm run lint && tsc --noEmit && npm run build"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
