--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,54 +1,39 @@
-name: CI
+name: CI / Code Quality Checks
 
-# Run on every push and pull request
 on:
   push:
-    branches: ['**']
+    branches: [main]
   pull_request:
-    branches: ['**']
+    branches: [main]
 
 jobs:
-  quality-checks:
-    name: Code Quality Checks
+  lint-and-type-check:
     runs-on: ubuntu-latest
-
+    
     steps:
-      # Step 1: Check out the code
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      # Step 2: Set up Node.js
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  
+      
+      - uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
-
-      # Step 3: Install dependencies
+      
       - name: Install dependencies
         run: npm ci
-
-      # Step 4: Run ESLint
+      
       - name: Run ESLint
         run: npm run lint
-
-      # Step 5: TypeScript type checking
-      - name: TypeScript type check
+      
+      - name: Run TypeScript check
         run: npx tsc --noEmit
-
-      # Step 6: Build the project
+      
       - name: Build project
         run: npm run build
+      
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
         env:
-          # Use dummy values for build-time env vars
-          VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL || 'https://placeholder.supabase.co' }}
-          VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY || 'placeholder-key' }}
-
-      # Step 7: Check build output exists
-      - name: Verify build output
-        run: |
-          if [ ! -d "dist" ]; then
-            echo "Build failed - dist directory not found"
-            exit 1
-          fi
-          echo "Build successful - dist directory created"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}    
