--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,6 +13,9 @@ sonar.test.inclusions=**/*.test.ts,**/*.test.tsx,**/*.spec.ts,**/*.spec.tsx
 # Exclude files
 sonar.exclusions=**/node_modules/**,**/*.test.ts,**/*.test.tsx,**/*.spec.ts,**/*.spec.tsx,build/**,dist/**,coverage/**
 
+# Coverage exclusions
+sonar.coverage.exclusions=src/**/*
+
 # TypeScript settings
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
